# fcitx5-macos-installer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  install.sh  package.py  requirments.txt
.github/workflows/: ci.yml
assets/en.lproj/: InfoPlist.strings
assets/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings
assets/zh-Hant.lproj/: InfoPlist.strings  Localizable.strings
cache/: README.md
cmake/: MacOSXBundleInfo.plist.in
im/: CMakeLists.txt  enable_im.swift  register_im.swift
scripts/: format.sh  lint.sh
src/: CMakeLists.txt  entry.swift  view.swift
